--- a/spring-jpa3/src/main/resources/application.properties
+++ b/spring-jpa3/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:ec2-3-218-112-22.compute-1.amazonaws.com:5432
 
 
 #JPA
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=
 spring.jpa.show-sql=true
 
 #DataSource
