--- a/spring-jpa3/src/main/resources/application.properties
+++ b/spring-jpa3/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:postgres://gwoazwvlecpbbw:f80b88347f57b2e90f1a6431847
 
 
 #JPA
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 #DataSource
